--- a/PYPLVL2_PYLVL2CCOND_E11_P15.ipynb
+++ b/PYPLVL2_PYLVL2CCOND_E11_P15.ipynb
@@ -164,13 +164,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": null,
       "metadata": {
         "id": "fEVBPe9i1okN",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5f9ee5de-639c-40dc-80b6-c2ee52e98d98"
+        "outputId": "e6d5ad4e-b213-41a4-cc22-5821bee922e5"
       },
       "outputs": [
         {
@@ -188,7 +188,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 69
+          "execution_count": 17
         }
       ],
       "source": [
@@ -256,13 +256,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": null,
       "metadata": {
         "id": "PP9Ioa9TQ8dy",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "042b3495-53dc-460d-b038-cfa454b8b48a"
+        "outputId": "68949214-a89b-4799-d2e3-9eab7cdadd0f"
       },
       "outputs": [
         {
@@ -280,7 +280,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 70
+          "execution_count": 18
         }
       ],
       "source": [
@@ -342,31 +342,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": null,
       "metadata": {
         "id": "wenUGkHINCyq",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5c363623-b6f9-43a5-c725-9d5bb4f8b284"
+        "outputId": "4f8f3264-0a00-464f-c38e-f3bfed651107"
       },
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "S\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "True"
+              "False"
             ]
           },
           "metadata": {},
-          "execution_count": 71
+          "execution_count": 19
         }
       ],
       "source": [
@@ -379,9 +372,11 @@
         "      print(variable)\n",
         "    if variable in lista:\n",
         "      return True\n",
+        "    else:\n",
+        "      return False\n",
         "\n",
         "\n",
-        "function([None, 'A', 'B', 'S', 1, 2.0, 3, True], 'S')"
+        "function([None, 'A', 'B', 'S', 1, 2.0, 3, True], 4)"
       ]
     },
     {
@@ -421,25 +416,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "4kZX3b9om0ah",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8777fa23-b3b4-4b2e-c571-f2d26f99c19e"
+        "outputId": "775522aa-dc13-4c9d-93a3-74f01e7cc635"
       },
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Error. Los catetos deben ser enteros o flotantes\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "4.707440918375927"
+              "0"
             ]
           },
           "metadata": {},
-          "execution_count": 72
+          "execution_count": 20
         }
       ],
       "source": [
@@ -453,11 +455,11 @@
         "      print(\"Error. Los catetos deben ser mayores que cero\")\n",
         "      return 0\n",
         "\n",
-        "    hipotenusa = ((cateto_1 ** 2) + (cateto_2 ** 2)) ** 0.5\n",
+        "    hipotenusa = ((cateto_1 ** 2) + (cateto_2 ** 2))\n",
         "    return hipotenusa\n",
         "\n",
         "\n",
-        "function(1, 4.6)"
+        "function(1.0,'a')"
       ]
     },
     {
@@ -501,24 +503,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": null,
       "metadata": {
         "id": "f_vCiuK_1okP",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2cd24a5f-2430-4c0f-b112-7e81f0e404cc"
+        "outputId": "4d0046c3-7534-4f15-bdce-67ae543064aa"
       },
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A es mayor o igual que B\n",
+            "A es múltiplo de B\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "False"
+              "True"
             ]
           },
           "metadata": {},
-          "execution_count": 73
+          "execution_count": 21
         }
       ],
       "source": [
@@ -539,8 +549,10 @@
         "      return False\n",
         "      print(\"A es menor a B\")\n",
         "\n",
+        "    return False\n",
         "\n",
-        "function(2, 3)"
+        "\n",
+        "function(60.0, 12)"
       ]
     },
     {
@@ -585,31 +597,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": null,
       "metadata": {
         "id": "UJ4Od-7A1okP",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 52
         },
-        "outputId": "8fb9e078-d82d-4c8c-a63d-7805049f7bc2"
+        "outputId": "7025a351-e903-4c3f-a40b-deb8a5dba9d1"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "el último digito de 203 es 3 y es menor que 6 y diferente de 0\n"
+            "el último digito de 720 es 0 y es 0\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "3"
-            ]
+              "'0'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
           },
           "metadata": {},
-          "execution_count": 74
+          "execution_count": 22
         }
       ],
       "source": [
@@ -621,7 +637,7 @@
         "      resultado = int(number_str[-1]) ** 2\n",
         "    elif int(number_str[-1]) == 0:\n",
         "      string = \"y es 0\"\n",
-        "      resultado = 0\n",
+        "      resultado = \"0\"\n",
         "    elif int(number_str[-1]) < 6 and int(number_str[-1]) != 0:\n",
         "      string = \"y es menor que 6 y diferente de 0\"\n",
         "      resultado = int(number_str[-1])\n",
@@ -629,7 +645,7 @@
         "    print(\"el último digito de\", str(number), \"es\", str(number_str[-1]), string)\n",
         "    return resultado\n",
         "\n",
-        "function(203)"
+        "function(720)"
       ]
     },
     {
@@ -672,13 +688,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": null,
       "metadata": {
         "id": "cpoNAS0b1okP",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2019340b-1b82-461e-c01c-e9c9ad48ee6d"
+        "outputId": "4d8f1c15-e897-4ecc-927c-ae817124feb8"
       },
       "outputs": [
         {
@@ -696,7 +712,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 75
+          "execution_count": 23
         }
       ],
       "source": [
@@ -765,14 +781,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": null,
       "metadata": {
         "id": "7QeAHDJ71okQ",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
         },
-        "outputId": "1f82ff59-9b06-4ef2-d9b2-3bb133ae9f2f"
+        "outputId": "8abe515a-4dde-4906-e2fe-4b1de693b0d0"
       },
       "outputs": [
         {
@@ -793,7 +809,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 76
+          "execution_count": 24
         }
       ],
       "source": [
@@ -846,24 +862,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": null,
       "metadata": {
         "id": "W3W28MRL1okQ",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "78b09ab6-f806-41ac-9915-9fd87504dd65"
+        "outputId": "666855e3-b940-4300-d638-6a2adf37d1e2"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "7"
+              "1"
             ]
           },
           "metadata": {},
-          "execution_count": 77
+          "execution_count": 25
         }
       ],
       "source": [
@@ -874,7 +890,7 @@
         "      return lista\n",
         "\n",
         "\n",
-        "function([1,2,3,4,5,6,7,8,9], 6)"
+        "function([1,2,3,4,5,6,7,8,9], 0)"
       ]
     },
     {
@@ -936,13 +952,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": null,
       "metadata": {
         "id": "-5JSeSwb1okQ",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fa8b675e-79b3-4202-edd0-3809e065f0ed"
+        "outputId": "3b0dfb44-8adc-4e69-e3fc-265f280727b1"
       },
       "outputs": [
         {
@@ -953,7 +969,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 78
+          "execution_count": 26
         }
       ],
       "source": [
@@ -1037,13 +1053,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": null,
       "metadata": {
         "id": "ZNcfJCO31okQ",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ee224e60-b1d0-4c83-e021-08be19f7ef1a"
+        "outputId": "063f01bc-9ef7-403e-c91b-a42c76798f09"
       },
       "outputs": [
         {
@@ -1061,7 +1077,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 79
+          "execution_count": 27
         }
       ],
       "source": [
